--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Church QR Scanner</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+     <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
     <style>
         body {
             background-color: white;
@@ -85,17 +86,24 @@
                 });
             };
 
-            const config = { fps: 10, qrbox: 250 }; // FPS and size of the scanning box
-            html5QrCode.start(
-                { facingMode: "environment" }, // Use rear camera
-                config,
-                qrCodeSuccessCallback
-            ).catch(err => {
-                alert('Error starting camera: ' + err);
-            });
+            // Check for permission
+            navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } })
+                .then(() => {
+                    const config = { fps: 10, qrbox: 250 }; // FPS and size of the scanning box
+                    html5QrCode.start(
+                        { facingMode: "environment" }, // Use rear camera
+                        config,
+                        qrCodeSuccessCallback
+                    ).catch(err => {
+                        alert('Error starting camera: ' + err);
+                    });
 
-            // Show the QR code reader
-            document.getElementById('reader').style.display = 'block';
+                    // Show the QR code reader
+                    document.getElementById('reader').style.display = 'block';
+                })
+                .catch(err => {
+                    alert('Camera permission denied: ' + err);
+                });
         }
 
         // Next Sunday Calculation
